Fix: asides unreadable on mobile devices

--- a/assets/styles/blockquote.less
+++ b/assets/styles/blockquote.less
@@ -21,6 +21,12 @@
   color: #a8a8a8;
 }
 
+@media (@small) {
+  .content aside {
+    display: none;
+  }
+}
+
 .content aside p.break {
   font-size: 2em;
   text-align: center;
